--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: late_init
 description: Execute code at a later stage, but before build has been called for the first time. Useful for initializations that depends on the context
-version: 1.0.1
+version: 1.1.0-nullsafety.0
 homepage: https://github.com/caneva20/late_init
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
